# EpiLongAI

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  metadata_template.tsv  train.yaml
epilongai/: __init__.py  api.py  cli.py
epilongai/analysis/: benchmark.py  clinical_scoring.py  figures.py  interpret.py  region_labeling.py
epilongai/data/: data_ingestion.py  dataset.py  positional_tracks.py  rna_integration.py  variant_processing.py  windowing.py
epilongai/models/: baseline_mlp.py  long_context_model.py  multimodal_model.py  population_aware.py
epilongai/training/: evaluate.py  metrics.py  plotting.py  predict.py  train.py  trainer.py
epilongai/utils/: config.py  logging.py  model_registry.py  schemas.py  seed.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  redis.yaml  secret.yaml  service.yaml
scripts/: generate_synthetic_data.py  load_test.py
tests/test_analysis/: test_benchmark.py  test_clinical_scoring.py  test_region_labeling.py
tests/test_api/: test_endpoints.py
tests/test_data/: test_dataset.py  test_ingestion.py  test_rna_integration.py  test_variant_processing.py  test_windowing.py
tests/test_integration/: test_e2e_pipeline.py
tests/test_models/: test_baseline_mlp.py  test_long_context.py  test_multimodal.py  test_population_aware.py
tests/test_training/: test_metrics.py
workflow/: Snakefile  config.yaml
workflow/envs/: epilongai.yaml
